package org.example.digital_banking_backend.dtos;

import lombok.Data;

@Data
public class BankAccountDTO {

    private String type;
}

