package org.example.digital_banking_backend.enums;

public enum AccountStatus {

    CREATED, ACTIVATED, SUSPENDED

}

