package org.example.digital_banking_backend.enums;

public enum OperationType {

    DEBIT, CREDIT

}

